Add publication data

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,108 +1,104 @@
 {% set pub2021 = [
   {
-    authors: "Kataria, R. and <b>Kaundal, R<sup>*</sup>.</b>",
+    authors: "Mohammadi, M<sup>$</sup>., Smith, E.A<sup>$^</sup>., Stanghellini, M.E., and <b>Kaundal, R<sup*</sup>.</b>",
+    content: "Insights into the host specificity of a new oomycete root pathogen, Pythium brassicum P1: whole genome sequencing and comparative analysis reveals contracted regulation of metabolism, protein families, and distinct pathogenicity repertoire.",
+    doiLink: "https://doi.org/10.3390/ijms22169002",
+    doiTitle: "10.3390/ijms22169002"
+  },
+  {
+    authors: "<i>Kataria, R.</i> and <b>Kaundal, R<sup>*</sup>.</b>",
     content: "alfaNET: A Database of Alfalfa-Bacterial Stem Blight Protein–Protein Interactions Revealing the Molecular Features of the Disease-causing Bacteria",
     doiLink: "https://doi.org/10.3390/ijms22158342",
     doiTitle: "10.3390/ijms22158342"
   },
   {
-    authors: "<b>Kaundal, R.<sup>*</sup></b>, Duhan, N., Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D.",
+    authors: "<b>Kaundal, R.<sup>*</sup></b>, <i>Duhan, N.</i>, Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D<sup>*</sup>.",
     content: "Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in alfalfa",
     doiLink: "https://doi.org/10.1038/s41598-021-84461-w",
     doiTitle: "10.1038/s41598-021-84461-w"
-  }
-]
-%}
-
-{% set pub2020 = [
-  {
-    authors: "Duhan, N., Meshram, M., Loaiza, C.D. and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "citSATdb: genome wide Simple Sequence Repeats (SSR) marker database of citrus species for germplasm characterization and improvement. Genes 11(12): 1486.",
-    doiLink: "https://www.mdpi.com/2073-4425/11/12/1486?utm_source=releaseissue&utm_medium=email&utm_campaign=releaseissue_genes&utm_term=doilink122",
-    doiTitle: "10.3390/genes11121486"
   },
   {
-    authors: "Loaiza, C.D. and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "PredHPI: an integrated web server platform for the detection and visualization of host-pathogen interactions using sequence-based methods. Bioinformatics, btaa862.",
+    authors: "<i>Loaiza, C.D.</i> and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "PredHPI: an integrated web server platform for the detection and visualization of host-pathogen interactions using sequence-based methods.",
     doiLink: "https://doi.org/10.1093/bioinformatics/btaa862",
     doiTitle: "10.1093/bioinformatics/btaa862"
   },
   {
-    authors: "Loaiza, C.D., Duhan, N., Lister, M. and <b>Kaundal, R<sup>*</sup></b>",
-    content: "In silico prediction of host-pathogen protein interactions in melioidosis pathogen Burkholderia pseudomallei and human reveals novel virulence factors and their targets. Briefings in Bioinformatics 00(00): 1-18",
+    authors: "<i>Loaiza, C.D.</i>, <i>Duhan, N.</i>, <u>Lister, M.</u>, and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "In silico prediction of host-pathogen protein interactions in melioidosis pathogen Burkholderia pseudomallei and human reveals novel virulence factors and their targets.",
     doiLink: "http://dx.doi.org/10.1093/bib/bbz162",
     doiTitle: "10.1093/bib/bbz162"
   }
 ]
 %}
 
+{% set pub2020 = [
+  {
+    authors: "<i>Duhan, N.</i>, <i>Meshram, M.</i>, <i>Loaiza, C.D.</i>, and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "citSATdb: genome wide Simple Sequence Repeats (SSR) marker database of citrus species for germplasm characterization and improvement. Genes 11(12): 1486.",
+    doiLink: "https://www.mdpi.com/2073-4425/11/12/1486?utm_source=releaseissue&utm_medium=email&utm_campaign=releaseissue_genes&utm_term=doilink122",
+    doiTitle: "10.3390/genes11121486"
+  },
+  {
+    authors: "<i>Sahu, S.S.</i>, <i>Loaiza, C.D.</i>, and <b>Kaundal, R<sup*</sup>.</b>",
+    content: "Plant-mSubP: a computational framework for the prediction of single- and multi-target protein subcellular localization using integrated machine learning approaches.",
+    doiLink: "https://doi.org/10.1093/aobpla/plz068",
+    doiTitle: "10.1093/aobpla/plz068"
+  }
+]
+%}
+
 {% set pub2019 = [
+  {
+    authors: "Sharma B., Batz T.A., <b>Kaundal R<sup>*</sup>.</b>, Kramer E.M., Sanders U.R.<sup>^</sup>, Mellano V.J., <u><i>Duhan N.</i></u>, and <i>Larson R.B.</i>",
+    content: 'Developmental and Molecular Changes Underlying the Vernalization-Induced Transition to Flowering in <i>Aquilegia coerulea</i> (James). <i>Genes</i>, <b>10</b>(10): 734. <em>PMCID:</em> <a href="https://www.mdpi.com/2073-4425/10/10/734" class="kbl-link" target="_blank">31546687</a>',
+    doiLink: 'https://www.mdpi.com/2073-4425/10/10/734',
+    doiTitle: '10.3390/genes10100734'
+  },
 
-{
-  authors: "Sahu SS<sup>$</sup>, Loaiza CD<sup>$</sup>, and Kaundal R<sup>*</sup>.",
-  content: "Plant-mSubP: a computational framework for the prediction of single- and multi-target protein subcellular localization using integrated machine learning approaches. <i>AoB Plants</i> (in press)",
-  doiLink: "https://doi.org/10.1093/aobpla/plz068",
-  doiTitle: "10.1093/aobpla/plz068"
-},
+  {
+    authors: 'Phatak, S.<sup>^</sup>, Thomas, A., <b>Kaundal, R<sup>*</sup>.</b>, <i>Jones, R.</i>, Hintze, K., and Benninghoff, A.',
+    content: 'Impact of the Total Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of Colitis-associated Colorectal Cancer. <i>Current Developments in Nutrition</i>, <b>3</b>(S1): nzz030.OR04-03-19',
+    doiLink: 'https://doi.org/10.1093/cdn/nzz030.OR04-03-19',
+    doiTitle: '10.1093/cdn/nzz030.OR04-03-19'
+  },
 
-{
-  authors: "Sharma B., Batz T.A., Kaundal R., Kramer E.M., Sanders U.R., Mellano V.J., Duhan N., Larson R.B.",
-  content: 'Developmental and Molecular Changes Underlying the Vernalization-Induced Transition to Flowering in <i>Aquilegia coerulea</i> (James). <i>Genes</i>, <b>10</b>(10): 734. <em>PMCID:</em> <a href="https://www.mdpi.com/2073-4425/10/10/734" class="kbl-link" target="_blank">31546687</a>',
-  doiLink: 'https://www.mdpi.com/2073-4425/10/10/734',
-  doiTitle: '10.3390/genes10100734'
-},
-
-{
-  authors: 'Phatak S, Thomas A, Kaundal R, Jones R, Hintze K, and Benninghoff A.',
-  content: 'Impact of the Total Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of Colitis-associated Colorectal Cancer. <i>Current Developments in Nutrition</i>, <b>3</b>(S1): nzz030.OR04-03-19',
-  doiLink: 'https://doi.org/10.1093/cdn/nzz030.OR04-03-19',
-  doiTitle: '10.1093/cdn/nzz030.OR04-03-19'
-},
-
-{
-  authors: 'Tello D, Gil J, Loaiza CD, Riascos JJ, Cardozo N, and Duitama J.',
-  content: 'NGSEP3: accurate variant calling across species and sequencing protocols. <i>Bioinformatics</i>, <b>35</b>(22): 4716-4723. <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6853766/" class="kbl-link" target="_blank">PMC6853766</a>',
-  doiLink: 'https://doi.org/10.1093/bioinformatics/btz275',
-  doiTitle: '10.1093/bioinformatics/btz275'
-}
-
+  {
+    authors: 'Tello, D., Gil, J., <i>Loaiza, C.D.</i>, Riascos, J.J., Cardozo, N., and Duitama, J.',
+    content: 'NGSEP3: accurate variant calling across species and sequencing protocols. <i>Bioinformatics</i>, <b>35</b>(22): 4716-4723. <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6853766/" class="kbl-link" target="_blank">PMC6853766</a>',
+    doiLink: 'https://doi.org/10.1093/bioinformatics/btz275',
+    doiTitle: '10.1093/bioinformatics/btz275'
+  }
 ]
 %}
 
 {% set pub2018 = [
 
-{
-  authors: 'Sandhu D, Pudussery MV, Kaundal R, Suarez DL, Kaundal A, Sekhon RS.',
-  content: 'Molecular characterization and expression analysis of the Na<sup>+</sup>/H<sup>+</sup> exchanger gene family in <i>Medicago truncatula</i>. <i>Functional & Integrative Genomics</i>, <b>18</b>(2): 141-153. <em>PMID:</em> <a href="https://www.ncbi.nlm.nih.gov/pubmed/29280022" class="kbl-link" target="_blank">29280022</a>',
-  doiLink: 'https://doi.org/10.1007/s10142-017-0581-9',
-  doiTitle: '10.1007/s10142-017-0581-9'
-},
+  {
+    authors: 'Sandhu, D., Pudussery, M.V., <b>Kaundal, R.</b>, Suarez, D.L., Kaundal, A., Sekhon, R.S.',
+    content: 'Molecular characterization and expression analysis of the Na<sup>+</sup>/H<sup>+</sup> exchanger gene family in <i>Medicago truncatula</i>. <i>Functional & Integrative Genomics</i>, <b>18</b>(2): 141-153. <em>PMID:</em> <a href="https://www.ncbi.nlm.nih.gov/pubmed/29280022" class="kbl-link" target="_blank">29280022</a>',
+    doiLink: 'https://doi.org/10.1007/s10142-017-0581-9',
+    doiTitle: '10.1007/s10142-017-0581-9'
+  },
 
-{
-  authors: 'Moley L, Jones R, Kaundal R, Thomas A, Benninghoff A, and Isom SC.',
-  content: 'Gene expression analysis and DNA methylation patterns of porcine somatic cell nuclear transfer blastocysts with high and low incidence of apoptosis. <i>Reproduction, Fertility and Development</i>, <b>31</b>(1): 128-128.',
-  doiLink: 'https://doi.org/10.1071/RDv31n1Ab5',
-  doiTitle: '10.1071/RDv31n1Ab5'
-}
+  {
+    authors: 'Moley, L.<sup>^</sup>, <i>Jones, R.</i>, <b>Kaundal, R.</b>, Thomas, A., Benninghoff, A., and Isom, S.C.',
+    content: 'Gene expression analysis and DNA methylation patterns of porcine somatic cell nuclear transfer blastocysts with high and low incidence of apoptosis. <i>Reproduction, Fertility and Development</i>, <b>31</b>(1): 128-128.',
+    doiLink: 'https://doi.org/10.1071/RDv31n1Ab5',
+    doiTitle: '10.1071/RDv31n1Ab5'
+  }
 
 ]
 %}
 
 {% set pub2016= [
 
-{
-  authors: 'Volz DC, Leet JK, Chen A, Stapleton HM, Katiyar N, Kaundal R, Yu Y, Wang Y.',
-  content: 'Tris(1,3-dichloro-2-propyl)phosphate Induces Genome-Wide Hypomethylation within Early Zebrafish Embryos. <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5080636/" class="kbl-link" target="_blank">PMC5080636</a>',
-  doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1021/acs.est.6b03656',
-  doiTitle: '10.1021/acs.est.6b03656'
-},
-
-{
-  authors: 'Wren JD, Toby I, Hong H, Nanduri B, Kaundal R, Dozmorov MG, Thakkar S',
-  content: 'Proceedings of the 2016 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference.<em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5073803/" class="kbl-link" target="_blank">PMC5073803</a>',
-  doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1213-4',
-  doiTitle: '10.1186/s12859-016-1213-4'
-}
+  {
+    authors: 'Volz, D.C., Leet, J.K., Chen, A., Stapleton, H.M., <i>Katiyar, N.</i>, <b>Kaundal, R.</b>, Yu, Y., Wang, Y.',
+    content: 'Tris(1,3-dichloro-2-propyl)phosphate Induces Genome-Wide Hypomethylation within Early Zebrafish Embryos. <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5080636/" class="kbl-link" target="_blank">PMC5080636</a>',
+    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1021/acs.est.6b03656',
+    doiTitle: '10.1021/acs.est.6b03656'
+  }
 
 ]
 %}
@@ -110,24 +106,17 @@
 {% set pub2014 = [
 
   {
-    authors: 'Sahu SS, Weirick T, Kaundal R.',
+    authors: '<i>Sahu, S.S.</i>, <u><i>Weirick, T.</i></u>, <b>Kaundal, R<sup>*</sup>.</b>',
     content: 'Predicting genome-scale Arabidopsis-Pseudomonas syringae interactome using domain and interolog-based approaches.<em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4251041/" class="kbl-link" target="_blank">PMC4251041</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-15-S11-S13',
     doiTitle: '10.1186/1471-2105-15-S11-S13'
   },
 
   {
-    authors: 'Weirick T, Sahu SS, Mahalingam R, Kaundal R.',
+    authors: '<u><i>Weirick, T.</i></u>, <i>Sahu, S.S.</i>, Mahalingam, R., <b>Kaundal, R<sup>*</sup>.</b>',
     content: 'LacSubPred: predicting subtypes of Laccases, an important lignin metabolism-related enzyme class, using in silico approaches.<em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4251044/" class="kbl-link" target="_blank">PMC4251044</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-15-S11-S15',
     doiTitle: '10.1186/1471-2105-15-S11-S15'
-  },
-
-  {
-    authors: 'Wren JD, Dozmorov MG, Burian D, Perkins A, Zhang C, Hoyt P, Kaundal R.',
-    content: 'Proceedings of the 2014 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference.<em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4251036/" class="kbl-link" target="_blank">PMC4251036</a>',
-    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-15-S11-I1',
-    doiTitle: '10.1186/1471-2105-15-S11-I1'
   }
 
 ]
@@ -135,61 +124,31 @@
 
 {% set pub2013 = [
   {
-    authors: 'Kaundal R, Sahu SS, Verma R, Weirick T.',
+    authors: '<b>Kaundal, R.</b>, <i>Sahu, S.S.</i>, Verma, R<sup>^</sup>., <u><i>Weirick, T.</i></u>',
     content: 'Identification and characterization of plastid-type proteins from sequence-attributed features using machine learning.<em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3851450 /" class="kbl-link" target="_blank">PMC3851450</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S7',
     doiTitle: '10.1186/1471-2105-14-S14-S7'
   },
 
   {
-    authors: 'Ahmed F, Kaundal R, Raghava GP.',
+    authors: 'Ahmed, F., <b>Kaundal, R.</b>, Raghava, G.P.',
     content: 'PHDcleav: a SVM based method for predicting human Dicer cleavage sites using sequence and secondary structure of miRNA precursors.<em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3851333/" class="kbl-link" target="_blank">PMC3851333</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S9',
     doiTitle: '10.1186/1471-2105-14-S14-S9'
-  },
-
-  {
-    authors: 'Wren JD, Dozmorov MG, Burian D, Kaundal R, Perkins A, Perkins E, Kupfer DM, Springer GK.',
-    content: 'Proceedings of the 2013 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference.<em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3851158/" class="kbl-link" target="_blank">PMC3851158</a>',
-    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S1',
-    doiTitle: '10.1186/1471-2105-14-S14-S1'
-  }
-]
-%}
-
-{% set pub2012 = [
-
-  {
-    authors: 'Wren JD, Dozmorov MG, Burian D, Kaundal R, Bridges S, Kupfer DM.',
-    content: 'Proceedings of the 2012 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) conference. <em>Introduction.</em> <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3439718/" class="kbl-link" target="_blank">PMC3439718</a>',
-    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-13-S15-S1',
-    doiTitle: '10.1186/1471-2105-13-S15-S1'
-  }
-
-]
-%}
-
-{% set pub2011 = [
-
-  {
-    authors: 'Lee, J., Kaundal, R., Li, J., Zhao, P.X. and Allen, R. 2011.',
-    content: 'Genome-wide identification of alternative polyadenylation (APA) genes in Arabidopsis and their biological validation <em> (submitted). </em>',
-    doiLink: '',
-    doiTitle: ''
   }
 ]
 %}
 
 {% set pub2010 = [
   {
-    authors: 'Kaundal, R., Saini, R. and Zhao, P.X. 2010.',
+    authors: '<b>Kaundal, R.</b>, Saini, R. and Zhao, P.X.',
     content: 'Combining machine learning and homology-based approaches to accurately predict subcellular localization in Arabidopsis. <em>Plant Physiology 154(1):</em> <strong>36-54.</strong><em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2938157/" class="kbl-link" target="_blank">PMC2832251</a>',
     doiLink: 'http://www.plantphysiol.org/content/154/1/36',
     doiTitle: '10.1104/pp.110.156851'
   },
 
   {
-    authors: 'Benedito, V.A., Li, H., Dai, X., Wandrey, M., He, J., Kaundal, R., Torres-Jerez, I., Gomez, S.K., Harrison, M.J., Tang, Y., Zhao, P.X. and Udvardi, M.K. 2010.',
+    authors: 'Benedito, V.A., Li, H., Dai, X., Wandrey, M., He, J., <b>Kaundal, R.</b>, Torres-Jerez, I., Gomez, S.K., Harrison, M.J., Tang, Y., Zhao, P.X. and Udvardi, M.K. 2010.',
     content: 'Genomic inventory and transcriptional analysis of Medicago truncatula transporters. <em>Plant Physiology152(3):</em> <strong>1716-1730.</strong> <em>PMCID:</em><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2832251/" class="kbl-link" target="_blank">PMC2832251</a>',
     doiLink: 'http://www.plantphysiol.org/content/152/3/1716',
     doiTitle: '10.1104/pp.109.148684'
@@ -199,7 +158,7 @@
 
 {% set pub2009 = [
   {
-    authors: 'Kaundal, R. and Raghava, G.P.S. 2009.',
+    authors: '<b>Kaundal, R.</b> and Raghava, G.P.S.',
     content: 'RSLpred: predicting subcellular localization of rice proteins combining compositional and evolutionary information. <em>Proteomics 9(9):</em><strong> 2324-2342.</strong> <em>PMCID:</em><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pmic.200700597" class="kbl-link" target="_blank">200700597</a>',
     doiLink: 'https://onlinelibrary.wiley.com/doi/abs/10.1002/pmic.200700597',
     doiTitle: '10.1002/pmic.200700597'
@@ -210,7 +169,7 @@
 {% set pub2007 = [
 
  {
-   authors: 'Kapoor, A.S. and Kaundal, R. 2007.',
+   authors: 'Kapoor, A.S. and <b>Kaundal, R.</b>',
    content: 'Development of weather based forewarning systems for rice blast. Himachal Journal of Agricultural Research 33(2): 211-217.',
    doiLink: '',
    doiTitle: ''
@@ -222,14 +181,14 @@
 {% set pub2006 = [
 
   {
-    authors: 'Kaundal, R., Kapoor, A.S. and Raghava, G.P.S. 2006.',
+    authors: '<b>Kaundal, R.</b>, Kapoor, A.S. and Raghava, G.P.S.',
     content: 'Machine learning techniques in disease forecasting: a case study on rice blast prediction. <em>BMC Bioinformatics 7(1):</em> <strong> 485.</strong><em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1647291/" class="kbl-link" target="_blank">PMC1647291</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-7-485',
     doiTitle: '10.1186/1471-2105-7-485'
   },
 
   {
-    authors: 'Kaundal, R. and Sharma, B.K. 2006.',
+    authors: '<b>Kaundal, R<sup>*</sup>.</b> and Sharma, B.K.',
     content: 'Genotype x environment interaction and stability analysis for yield and other quantitative traits in maize (Zea mays L.) under rainfed and high rainfall valley areas of the sub-montane. Research on Crops 7(1): 171-180.',
     doiLink: '',
     doiTitle: ''
@@ -241,14 +200,14 @@
 {% set pub2005 = [
 
   {
-    authors: 'Kaundal, R. and Sharma, B.K. 2005.',
+    authors: '<b>Kaundal, R<sup>*</sup>.</b> and Sharma, B.K.',
     content: 'Genetic variability and association studies for different yield components over the environments in elite cultivars of Zea mays L. Himachal Journal of Agricultural Research 31(1): 31-38.',
     doiLink: '',
     doiTitle: ''
   },
 
   {
-    authors: 'Kaundal, R. and Kapoor, A.S. 2005.',
+    authors: '<b>Kaundal, R.</b> and Kapoor, A.S.',
     content: 'Virulence pattern of Pyricularia grisea in district Kangra of Himachal Pradesh. Himachal Journal of Agricultural Research 31(2): 170-172.',
     doiLink: '',
     doiTitle: ''
