--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -131,7 +131,14 @@
   }
 %}
 
-{% set hpi = [predhpi, apinet, deepHPI, huco] %}
+{% set malivhu = {
+    img: "/image/bioinfo/tools/malivhu.png",
+    title: "Malivhu",
+    link: "http://bioinfo.usu.edu/malivhu/"
+  }
+%}
+
+{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
