Add publications data

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -6,25 +6,25 @@
     doiTitle: "10.3390/ijms22169002"
   },
   {
-    authors: "<i>Kataria, R.</i> and <b>Kaundal, R<sup>*</sup>.</b>",
+    authors: "<u>Kataria, R.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
     content: "alfaNET: A Database of Alfalfa-Bacterial Stem Blight Protein–Protein Interactions Revealing the Molecular Features of the Disease-causing Bacteria",
     doiLink: "https://doi.org/10.3390/ijms22158342",
     doiTitle: "10.3390/ijms22158342"
   },
   {
-    authors: "<b>Kaundal, R.<sup>*</sup></b>, <i>Duhan, N.</i>, Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D<sup>*</sup>.",
+    authors: "<b>Kaundal, R.<sup>*</sup></b>, <u>Duhan, N.</u>, Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D<sup>*</sup>.",
     content: "Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in alfalfa",
     doiLink: "https://doi.org/10.1038/s41598-021-84461-w",
     doiTitle: "10.1038/s41598-021-84461-w"
   },
   {
-    authors: "<i>Loaiza, C.D.</i> and <b>Kaundal, R<sup>*</sup>.</b>",
+    authors: "<u>Loaiza, C.D.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
     content: "PredHPI: an integrated web server platform for the detection and visualization of host-pathogen interactions using sequence-based methods.",
     doiLink: "https://doi.org/10.1093/bioinformatics/btaa862",
     doiTitle: "10.1093/bioinformatics/btaa862"
   },
   {
-    authors: "<i>Loaiza, C.D.</i>, <i>Duhan, N.</i>, <u>Lister, M.</u>, and <b>Kaundal, R<sup>*</sup>.</b>",
+    authors: "<u>Loaiza, C.D.</u>, <u>Duhan, N.</u>, <i>Lister, M.</i>, and <b>Kaundal, R<sup>*</sup>.</b>",
     content: "In silico prediction of host-pathogen protein interactions in melioidosis pathogen Burkholderia pseudomallei and human reveals novel virulence factors and their targets.",
     doiLink: "http://dx.doi.org/10.1093/bib/bbz162",
     doiTitle: "10.1093/bib/bbz162"
@@ -34,13 +34,13 @@
 
 {% set pub2020 = [
   {
-    authors: "<i>Duhan, N.</i>, <i>Meshram, M.</i>, <i>Loaiza, C.D.</i>, and <b>Kaundal, R<sup>*</sup>.</b>",
+    authors: "<u>Duhan, N.</u>, <u>Meshram, M.</u>, <u>Loaiza, C.D.</u>, and <b>Kaundal, R<sup>*</sup>.</b>",
     content: "citSATdb: genome wide Simple Sequence Repeats (SSR) marker database of citrus species for germplasm characterization and improvement. Genes 11(12): 1486.",
     doiLink: "https://www.mdpi.com/2073-4425/11/12/1486?utm_source=releaseissue&utm_medium=email&utm_campaign=releaseissue_genes&utm_term=doilink122",
     doiTitle: "10.3390/genes11121486"
   },
   {
-    authors: "<i>Sahu, S.S.</i>, <i>Loaiza, C.D.</i>, and <b>Kaundal, R<sup*</sup>.</b>",
+    authors: "<u>Sahu, S.S.</u>, <u>Loaiza, C.D.</u>, and <b>Kaundal, R<sup*</sup>.</b>",
     content: "Plant-mSubP: a computational framework for the prediction of single- and multi-target protein subcellular localization using integrated machine learning approaches.",
     doiLink: "https://doi.org/10.1093/aobpla/plz068",
     doiTitle: "10.1093/aobpla/plz068"
@@ -50,21 +50,21 @@
 
 {% set pub2019 = [
   {
-    authors: "Sharma B., Batz T.A., <b>Kaundal R<sup>*</sup>.</b>, Kramer E.M., Sanders U.R.<sup>^</sup>, Mellano V.J., <u><i>Duhan N.</i></u>, and <i>Larson R.B.</i>",
+    authors: "Sharma B., Batz T.A., <b>Kaundal R<sup>*</sup>.</b>, Kramer E.M., Sanders U.R.<sup>^</sup>, Mellano V.J., <u>Duhan N.</u>, and <i><u>Larson R.B.</u></i>",
     content: 'Developmental and Molecular Changes Underlying the Vernalization-Induced Transition to Flowering in <i>Aquilegia coerulea</i> (James). <i>Genes</i>, <b>10</b>(10): 734. <em>PMCID:</em> <a href="https://www.mdpi.com/2073-4425/10/10/734" class="kbl-link" target="_blank">31546687</a>',
     doiLink: 'https://www.mdpi.com/2073-4425/10/10/734',
     doiTitle: '10.3390/genes10100734'
   },
 
   {
-    authors: 'Phatak, S.<sup>^</sup>, Thomas, A., <b>Kaundal, R<sup>*</sup>.</b>, <i>Jones, R.</i>, Hintze, K., and Benninghoff, A.',
+    authors: 'Phatak, S.<sup>^</sup>, Thomas, A., <b>Kaundal, R<sup>*</sup>.</b>, <u>Jones, R.</u>, Hintze, K., and Benninghoff, A.',
     content: 'Impact of the Total Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of Colitis-associated Colorectal Cancer. <i>Current Developments in Nutrition</i>, <b>3</b>(S1): nzz030.OR04-03-19',
     doiLink: 'https://doi.org/10.1093/cdn/nzz030.OR04-03-19',
     doiTitle: '10.1093/cdn/nzz030.OR04-03-19'
   },
 
   {
-    authors: 'Tello, D., Gil, J., <i>Loaiza, C.D.</i>, Riascos, J.J., Cardozo, N., and Duitama, J.',
+    authors: 'Tello, D., Gil, J., <u>Loaiza, C.D.</u>, Riascos, J.J., Cardozo, N., and Duitama, J.',
     content: 'NGSEP3: accurate variant calling across species and sequencing protocols. <i>Bioinformatics</i>, <b>35</b>(22): 4716-4723. <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6853766/" class="kbl-link" target="_blank">PMC6853766</a>',
     doiLink: 'https://doi.org/10.1093/bioinformatics/btz275',
     doiTitle: '10.1093/bioinformatics/btz275'
@@ -94,7 +94,7 @@
 {% set pub2016= [
 
   {
-    authors: 'Volz, D.C., Leet, J.K., Chen, A., Stapleton, H.M., <i>Katiyar, N.</i>, <b>Kaundal, R.</b>, Yu, Y., Wang, Y.',
+    authors: 'Volz, D.C., Leet, J.K., Chen, A., Stapleton, H.M., <u>Katiyar, N.</u>, <b>Kaundal, R.</b>, Yu, Y., Wang, Y.',
     content: 'Tris(1,3-dichloro-2-propyl)phosphate Induces Genome-Wide Hypomethylation within Early Zebrafish Embryos. <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5080636/" class="kbl-link" target="_blank">PMC5080636</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1021/acs.est.6b03656',
     doiTitle: '10.1021/acs.est.6b03656'
@@ -106,7 +106,7 @@
 {% set pub2014 = [
 
   {
-    authors: '<i>Sahu, S.S.</i>, <u><i>Weirick, T.</i></u>, <b>Kaundal, R<sup>*</sup>.</b>',
+    authors: '<u>Sahu, S.S.</u>, <u><i>Weirick, T.</i></u>, <b>Kaundal, R<sup>*</sup>.</b>',
     content: 'Predicting genome-scale Arabidopsis-Pseudomonas syringae interactome using domain and interolog-based approaches.<em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4251041/" class="kbl-link" target="_blank">PMC4251041</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-15-S11-S13',
     doiTitle: '10.1186/1471-2105-15-S11-S13'
@@ -124,7 +124,7 @@
 
 {% set pub2013 = [
   {
-    authors: '<b>Kaundal, R.</b>, <i>Sahu, S.S.</i>, Verma, R<sup>^</sup>., <u><i>Weirick, T.</i></u>',
+    authors: '<b>Kaundal, R.</b>, <u>Sahu, S.S.</u>, Verma, R<sup>^</sup>., <u><i>Weirick, T.</i></u>',
     content: 'Identification and characterization of plastid-type proteins from sequence-attributed features using machine learning.<em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3851450 /" class="kbl-link" target="_blank">PMC3851450</a>',
     doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S7',
     doiTitle: '10.1186/1471-2105-14-S14-S7'
@@ -148,7 +148,7 @@
   },
 
   {
-    authors: 'Benedito, V.A., Li, H., Dai, X., Wandrey, M., He, J., <b>Kaundal, R.</b>, Torres-Jerez, I., Gomez, S.K., Harrison, M.J., Tang, Y., Zhao, P.X. and Udvardi, M.K. 2010.',
+    authors: 'Benedito, V.A., Li, H., Dai, X., Wandrey, M., He, J., <b>Kaundal, R.</b>, Torres-Jerez, I., Gomez, S.K., Harrison, M.J., Tang, Y., Zhao, P.X. and Udvardi, M.K.',
     content: 'Genomic inventory and transcriptional analysis of Medicago truncatula transporters. <em>Plant Physiology152(3):</em> <strong>1716-1730.</strong> <em>PMCID:</em><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2832251/" class="kbl-link" target="_blank">PMC2832251</a>',
     doiLink: 'http://www.plantphysiol.org/content/152/3/1716',
     doiTitle: '10.1104/pp.109.148684'
