--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -193,6 +193,12 @@
         </section>
       </article>
 
+      <article class="col-11 col-md-3">
+        <section class="text-center col-header mb-1 mb-md-4 mt-4 mt-md-0">
+          <b class="col-header-text">Media</b>
+        </section>
+      </article>
+
     </div>
   </article>
 
