--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -197,6 +197,62 @@
         <section class="text-center col-header mb-1 mb-md-4 mt-4 mt-md-0">
           <b class="col-header-text">Media</b>
         </section>
+
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/first-international-heroes-night-to-celebrate-international-faculty">
+            <div class="row ps-0">
+              <div class="col px-2 pt-1">
+                <span class="date"><i class="far fa-calendar-alt"></i> November 4, 2021</span>
+                <h5 class="header mb-0">First International Heroes Night</h5>
+                <div class="desc mt-0">
+                  Dr. Rakesh Kaundal has been selected for the 2021 International Faculty Recognition Award. 
+                </div>
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/nih-funds-usu-researchers-work-on-fathers-nutrition-and-childrens-health">
+            <div class="row ps-0">
+              <div class="col px-2 pt-1">
+                <span class="date"><i class="far fa-calendar-alt"></i> August 9, 2021</span>
+                <h5 class="header mb-0">NIH Funds USU Researchers' Work on Fathers' Nutrition and Children's Health</h5>
+                <div class="desc mt-0">
+                  Dr. Kaundal is a Co-PI on a $1.56M research grant from the NIH. 
+                </div>
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/data-scientists-uncovering-genes-that-protect-alfalfa-against-salinity-stress">
+            <div class="row ps-0">
+              <div class="col px-2 pt-1">
+                <span class="date"><i class="far fa-calendar-alt"></i> April 6, 2021</span>
+                <h5 class="header mb-0">Uncovering Genes that Protect Alfalfa against Salinity Stress</h5>
+                <div class="desc mt-0">
+                  Salt stress is an example of big data bringing immense benefits to plant science.
+                </div>
+              </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research">
+            <div class="row ps-0">
+              <div class="col px-2 pt-1">
+                <span class="date"><i class="far fa-calendar-alt"></i> March 24, 2021</span>
+                <h5 class="header mb-0">Students Receive Grants to Conduct Undergraduate Research</h5>
+                <div class="desc mt-0">
+                  Kolton Hauck is using big data to investigate diverse strands of SARS-CoV-2 virus.
+                </div>
+              </div>
+            </div>
+          </a>
+        </section>
       </article>
 
     </div>
