Update pub data

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -57,7 +57,7 @@
   },
 
   {
-    authors: 'Phatak, S.<sup>^</sup>, Thomas, A., <b>Kaundal, R<sup>*</sup>.</b>, <u>Jones, R.</u>, Hintze, K., and Benninghoff, A.',
+    authors: 'Phatak, S.<sup>^</sup>, Thomas, A., <b>Kaundal, R<sup>*</sup>.</b>, <i><u>Jones, R.</u></i>, Hintze, K., and Benninghoff, A.',
     content: 'Impact of the Total Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of Colitis-associated Colorectal Cancer. <i>Current Developments in Nutrition</i>, <b>3</b>(S1): nzz030.OR04-03-19',
     doiLink: 'https://doi.org/10.1093/cdn/nzz030.OR04-03-19',
     doiTitle: '10.1093/cdn/nzz030.OR04-03-19'
@@ -82,7 +82,7 @@
   },
 
   {
-    authors: 'Moley, L.<sup>^</sup>, <i>Jones, R.</i>, <b>Kaundal, R.</b>, Thomas, A., Benninghoff, A., and Isom, S.C.',
+    authors: 'Moley, L.<sup>^</sup>, <u><i>Jones, R.</i></u>, <b>Kaundal, R.</b>, Thomas, A., Benninghoff, A., and Isom, S.C.',
     content: 'Gene expression analysis and DNA methylation patterns of porcine somatic cell nuclear transfer blastocysts with high and low incidence of apoptosis. <i>Reproduction, Fertility and Development</i>, <b>31</b>(1): 128-128.',
     doiLink: 'https://doi.org/10.1071/RDv31n1Ab5',
     doiTitle: '10.1071/RDv31n1Ab5'
