Fix tool images

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -41,21 +41,21 @@
 %}
 
 {% set greeningDB = {
-    img: "/image/bioinfo/tools/greeningdb.PNG",
+    img: "/image/bioinfo/tools/citrus4.jpg",
     title: "GreeningDB",
     link: "http://bioinfo.usu.edu/GreeningDB/"
   }
 %}
 
 {% set citSATdb = {
-    img: "/image/bioinfo/tools/citSatDB.png",
+    img: "/image/bioinfo/tools/citsat.jpg",
     title: "citSATdb",
     link: "http://bioinfo.usu.edu/citSATdb/"
   }
 %}
 
 {% set legumeSSRdb = {
-    img: "/image/bioinfo/tools/legumeSSRdb.png",
+    img: "/image/bioinfo/tools/beans.jpg",
     title: "legumeSSRdb",
     link: "http://bioinfo.usu.edu/legumeSSRdb"
   }
@@ -104,7 +104,7 @@
 %}
 
 {% set huco = {
-    img: "/image/bioinfo/tools/interactome.png",
+    img: "/image/bioinfo/tools/covid.jpg",
     title: "HuCoPIA",
     link: "http://bioinfo.usu.edu/hucopia/"
   }
@@ -118,7 +118,7 @@
 %}
 
 {% set alfaNet = {
-    img: "/image/bioinfo/tools/alfanet.png",
+    img: "/image/bioinfo/tools/alfalfa.jpg",
     title: "alfaNET",
     link: "http://bioinfo.usu.edu/alfanet/"
   }
